8.0.0-rc2
 - Release candidate for 8.0.0.
 - Any changes will be logged under "8.0.0".
 - Add `begin() const`, `end() const`, etc. to `pqxx::array`.
8.0.0
 - C++20 is now the oldest C++ version that libpqxx supports.
 - **Result/row iterators have changed.**  Instead of `i[n]` do `(*i)[n]`.
 - **Result equality now only compares identity, not the data inside.**
 - **Row/field equality now only compares identity, not the data inside.**
 - `pqxx::bytes` is now a vector of bytes, not a string of bytes. (#924)
 - Use `pqxx::bytes::data()` instead of `pqxx::bytes::c_str()`.
 - The string conversion API has changed! (Old API should still work). (#948)
 - "String conversion" to `std::string_view` etc. is now supported. (#694)
 - Simpler to use: `pqxx::from_string()`, `pqxx::to_buf()`, `pqxx::into_bu()`.
 - `to_buf()` and `into_buf()` functions will no longer zero-terminate.
 - **Beware lifetime** when "converting" a string to `std::string_view`!
 - Conversion from string to `char const *` is no longer allowed.
 - Binary data can be any `std::contiguous_range` of `std::byte`. (#925)
 - Generic `quote()` takes `always_null` into account.
 - You can now convert strings to `pqxx::array` types.
 - There are fewer raw pointers in the API, for safety & verifiability.
 - The libpqxx exceptions now have a `std::source_location`. (#923)
 - Result & row iterators are now proper random access iterators.
 - More getters are now `noexcept`.
 - Retired `binarystring` and its headers.  Use `blob` instead.
 - Retired `connection_base` type alias.  Use `connection`.
 - Retired `pqxx::encrypt_password()`.  Use the ones in `pqxx::connection`.
 - Retired `pqxx::prepare::dynamic_params`.  Use `pqxx::params`.
 - Retired deprecated `stream_to` constructors.  Use factory functions.
 - Retired `transaction_base::unesc_raw()`.  Use `unesc_bin()`.
 - Retired `transaction_base::quote_raw()`.  Use `quote()` with `bytes_view`.
 - Deprecated `field` constructors are no longer publicly accessible.