@@ -95,6 +95,8 @@ jobs:
     #
     # This string gets us back to the old default, but expect that to stop
     # working soon also.
+    #
+    # I've been trying to find a list of available options, but not much luck.
     resource_class: macos.m1.medium.gen1
     steps:
       - checkout
